--- a/style.css
+++ b/style.css
@@ -238,7 +238,7 @@
     line-height: 2.3rem;
     text-transform: uppercase;
     text-decoration: none;
-    color: #ffffff;
+    color: #fff;
     display: inline-block;
     padding: 1.6rem 3.2rem;
     margin: 4.8rem auto 8rem;
